# Trade-platform

./: .gitignore  MERGE_AUDIT_STEP3_1.md  OI_OPTIMIZATION_COMMANDS.md  OLEG_FLOW_GUARD_PATCH_NOTES.md  OLEG_OI_COLLECTOR_OPTIMIZATION_NOTES.md  OLEG_PUMP_FIX_NOTES.md  OLEG_UNIFIED_INTERVALS_AND_PLOTS_NOTES.md  PUMP_CONFIG_AUDIT_MERGE.md  PUMP_OPTIMIZATION_COMMANDS.md  README.md  check_telegram.py  check_usertrades.py  db_check_v4.sql  db_liveness.sql  enable_binance_hedge_mode.py  info_command.txt  pyproject.toml  requirements.txt  run_bots.txt  run_enable_binance_hedge_mode_fixed.ps1  run_market_data.bat  run_market_data_1.bat  run_market_data_dual.bat  starting  tep-g1-order-events  verify_hedge_mode.sql
Trade_2.04.26/: CHANGELOG.md  GIT_COMMIT_INSTRUCTIONS.txt  OI_SCREENERS_PATCH_NOTES.md  OI_SCREENERS_PATCH_NOTES_STEP2.md  OLEG_INTERVAL_ALIGNMENT_NOTES.md  OLEG_REPAIR_OI_V3_NOTES.md  PUMP_SCREENER_FIX_NOTES.md  README.md  README_OI_PATCH_CHECKED.txt  averaging_levels_patch_summary.md  check_db.py  check_project_telegram.py  db_check.sql  db_check_v2.sql  db_health_check.sql  optimize_oi.ps1  pyproject.toml  run_oi_optimization.bat  run_oi_optimization.sh
backup/: backup_schema.sql
config/: balance_instances.yaml  market_data.yaml  market_data_fast_5m.yaml  market_data_slow.yaml  screener_oi.yaml  screener_oi_aggressive.yaml  screener_oi_conservative.yaml  screener_oi_conservative_new.yaml  screener_oi_strict.yaml  screener_pump.yaml  screener_pump_conservative.yaml  screener_pump_conservative_new.yaml  screener_pump_old.yaml  screeners.yaml  strategies.yaml  (+13 more)
(+221 files in other folders)
